--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-custom-scrollbars",
   "version": "4.1.2",
   "description": "React scrollbars component",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "scripts": {
     "clean": "rimraf lib dist",
     "build": "babel src --out-dir lib",
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/malte-wessel/react-custom-scrollbars.git"
+    "url": "https://github.com/StipJey/react-custom-scrollbars.git"
   },
   "keywords": [
     "scroll",
