--- a/package.json
+++ b/package.json
@@ -61,9 +61,9 @@
     "karma-sourcemap-loader": "^0.3.6",
     "karma-webpack": "^1.6.0",
     "mocha": "^2.2.5",
-    "react": "^0.14.0 || ^15.0.0",
+    "react": "^16.8.1",
     "react-addons-test-utils": "^0.14.0 || ^15.0.0",
-    "react-dom": "^0.14.0 || ^15.0.0",
+    "react-dom": "^16.8.1",
     "rimraf": "^2.3.4",
     "simulant": "^0.2.2",
     "webpack": "^1.9.6",
